Fix spacing

--- a/css/position/task/style.css
+++ b/css/position/task/style.css
@@ -3,6 +3,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header {
+    position: fixed;
+    top: 0;
+}
+
 h1 {
     text-align: center;
 }
